--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.6",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/native": "^6.1.12",
+    "@react-navigation/stack": "^6.3.23",
+    "axios": "^1.6.7",
+    "expo": "~50.0.13",
+    "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^9.6.11",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "^0.73.5",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-progress": "^5.0.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
